fix: add some overflow rules

--- a/style.css
+++ b/style.css
@@ -236,6 +236,8 @@ h1 {
     text-align: justify;
     word-wrap: break-word;
     letter-spacing: -0.1px;
+    max-height: 66px;
+    overflow: hidden;
 }
 
 .bottom-line {
@@ -422,8 +424,6 @@ section {
     font-family: 'Lato';
     font-weight: 900;
     text-align: left;
-    white-space: nowrap;
-    overflow: hidden;
 }
 
 .text .bio-description {
@@ -434,8 +434,6 @@ section {
     font-family: 'Lato';
     font-weight: 400;
     text-align: left;
-    height: 44px;
-    overflow: hidden;
 }
 
 .social-links {
